--- a/forum_proj/forum_app/templates/forum_app/dashboard.html
+++ b/forum_proj/forum_app/templates/forum_app/dashboard.html
@@ -13,7 +13,7 @@
 
         <!-- Logout button -->
         <form method="post" action="{% url 'logout' %}">
-           
+            {% csrf_token %}
             <button type="submit" class="btn-logout">Logout</button>
         </form>
     </div>
